namespace ConsoleOop.Tasks
{
    /// <summary>
    /// 簡單備份
    /// </summary>
    class SimpleTask : AbstractTask
    {
    }
}
